--- a/public/labs/lab_2/style.css
+++ b/public/labs/lab_2/style.css
@@ -14,13 +14,13 @@ body {
   width: 70%;
   min-width: 800px;
   margin: 0 auto;
-  background-color: #6091C3;
+  background-color: #44bfe4;
 }
 
 /* || typography */
 
 h1, h2, h3 {
-  font-family: 'Cinzel Decorative', cursive;
+  font-family: 'Lobster', cursive;
   color: #2a2a2a;
 }
 
@@ -60,11 +60,11 @@ p, li {
 }
 
 body > * {
-  background-color: red;
+  background-color: rgb(21, 255, 0);
   padding: 1%;
 }
 
-.main, .header, nav, .article, .aside, .footer, section {
+.main, .header, nav, .article, .aside, .footer, .section {
   background-color: rgba(0,255,0,0.5);
   padding: 1%;
 }
