--- a/public/labs/lab_2/style.css
+++ b/public/labs/lab_2/style.css
@@ -20,7 +20,7 @@ body {
 /* || typography */
 
 h1, h2, h3 {
-  font-family: 'Lobster', cursive;
+  font-family: 'Lobster';
   color: #2a2a2a;
 }
 
@@ -39,7 +39,7 @@ h1 {
 h2 {
   font-size: 5rem;
   text-align: center;
-  font-weight: 800;
+  font-weight: 500;
 }
 
 h3 {
