--- a/public/labs/lab_3/styles.css
+++ b/public/labs/lab_3/styles.css
@@ -1,2 +1,65 @@
 /* Add some css styles based on the tutorial at javascript.info: introduction to browser events
  https://javascript.info/introduction-browser-events */
+
+/* || General setup */
+
+/* html, body {
+    margin: 0;
+    padding: 0;
+}
+  
+html {
+    font-size: 10px;
+  
+}
+  
+body {
+    width: 70%;
+    min-width: 800px;
+    margin: 0 auto;
+    background-color: #44bfe4;
+} */
+
+
+/* || Carousel setup */
+
+.arrow {
+    padding: 0;
+    background: #ddd;
+    border-radius: 15px;
+    border: 1px solid gray;
+    font-size: 24px;
+    line-height: 24px;
+    color: #444;
+    display: block;
+}
+.arrow:focus {
+    outline: none;
+}
+.arrow:hover {
+    background: #ccc;
+    cursor: pointer;
+}
+
+ul {
+    height: 130px;
+    width: 9999px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    font-size: 0;
+}
+
+ul img {
+    width: 130px;
+    height: 130px;
+    display: block;
+}
+
+ul li {
+    display: inline-block
+}
+
+/* .carousel {} */
+
+/* ul - width 9999px, margin-left: -350px */
