--- a/public/flappy/style.css
+++ b/public/flappy/style.css
@@ -3,8 +3,8 @@ body {
 }
 
 .game-container {
-    height: 500px;
-    width: 730px;
+    width: 500px;
+    height: 730px;
     position: absolute;
     left: 80px;
 }
@@ -12,7 +12,7 @@ body {
 .border-left {
     width: 80px;
     height: 790px;
-    position: absolute;
+    position:  absolute;
     background-color: white;
     z-index: +2;
 }
@@ -23,52 +23,91 @@ body {
     position: absolute;
     background-color: white;
     z-index: +2;
-    left: 580px
+    left: 580px;
 }
 
 .border-top {
     width: 660px;
     height: 50px;
-    position: absolute;
+    position:  absolute;
     background-color: white;
     z-index: +2;
-    top: -50px
+    top: -50px;
 }
 
 .sky {
-    height: 500px;
-    width: 580px;
     background-image: url('fb-game-background.png');
+    width: 500px;
+    height: 580px;
     position: absolute;
 }
 
 .ground {
-    height: 150px;
-    width: 500px;
     background-image: url('bottom-background.png');
+    width: 500px;
+    height: 150px;
     position: absolute;
     top: 580px;
     z-index: +1;
 }
 
 .bird {
-    height: 60px;
-    width: 45px;
     background-image: url('flappy-bird.png');
     position: absolute;
+    width: 60px;
+    height: 45px;
+    left: 220px;
+    bottom: 100px;
 }
 
 .obstacle {
-    height: 60px;
-    width: 300px;
     background-image: url('flappybird-pipe.png');
+    width: 60px;
+    height: 300px;
     position: absolute;
 }
 
 .topObstacle {
-    transform: rotate(180deg);
-    height: 60px;
-    width: 300px;
     background-image: url('flappybird-pipe.png');
+    transform: rotate(180deg);
+    width: 60px;
+    height: 300px;
     position: absolute;
 }
+
+@keyframes slideright {
+    from {
+        background-position: 10000%;
+    }
+    to {
+        background-position: 0%;
+    }
+  }
+  
+  @-webkit-keyframes slideright {
+    from {
+        background-position: 10000%;
+    }
+    to {
+        background-position: 0%;
+    }
+  }
+
+  .ground-container {
+      height: 150px;
+      width: 580px;
+      left: 80px;
+      position:  absolute;
+  }
+  
+  .ground-moving {
+    position: absolute;
+    top: 580px;
+    height: 150px;
+    background-image: url('bottom-background.png');
+    background-repeat: repeat-x;
+    animation: slideright 100s infinite linear;
+    -webkit-animation: slideright 100s infinite linear;
+    width: 100%;
+    z-index: +1;
+  }
